--- a/angularjs-dataread/angular-seed/app/index.html
+++ b/angularjs-dataread/angular-seed/app/index.html
@@ -21,8 +21,8 @@
     </tbody>
   </table>
   <script src="bower_components/angular/angular.js"</script>
-  <!--  <script src="app.js"</script>
-  <script src="controllers.js"</script> -->
+  <script src="app.js"</script>
+  <script src="controllers.js"</script>
   <script src="bower_components/angular-route/angular-route.js"</script> 
   <script src="services.js"</script>
 </body>
